# db-connect

./: .eslintrc.yml  package.json  pnpm-lock.yaml
public/: splashscreen.html
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: dbconnect.rs  main.rs
src/components/: DBconnect.vue
