[package]
name = "db-connect"
version = "0.1.0"
description = "db-connect"
authors = ["tansen"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
sqlx = { version = "0.7.3", features = ["mysql",
        "runtime-tokio-native-tls", 
        "rust_decimal", 
        "chrono",
        "time",
    ] }
tokio = { version="1.35.1", features= ["full"] }
rust_decimal = "1.34.2"
chrono = "0.4.33"
futures = "0.3.30"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
