[package]
name = "db-connect"
version = "0.1.0"
description = "db-connect"
authors = ["tansen"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
sqlx = { version = "0.7.3", features = ["mysql",
        "runtime-tokio-native-tls", 
        "rust_decimal", 
        "chrono",
        "time",
    ] }
tokio = { version="1.41.1", features= ["full"] }
rust_decimal = "1.36.0"
chrono = "0.4.33"
futures = "0.3.30"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
